breadcrumps, logos, spende vereinhetlichen

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -7,6 +7,7 @@
   padding-left: 20px;
   padding-right: 20px;
 }
+
 </style>
 
 <!-- navbar-light links the colors with the background image -->
@@ -112,16 +113,16 @@
                  <li class="dropdown-submenu">
                    <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Einmalig</a>
                    <ul class="dropdown-menu">
-                     <li class="dropdown-item"><a href="#">Länderpate</a></li>
+                     <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandeinmal">Länderpate</a></li>
                      <li class="dropdown-item"><a href="#">Dorfpate</a></li>
                      <li class="dropdown-item"><a href="#">Waldpate</a></li>
                    </ul>
                    <a class="dropdown-item" href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Regelmäßig</a>
                    <ul class="dropdown-menu">
                      <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li>
-                     <li class="dropdown-item"><a href="#">Dorfpate</a></li>
-                     <li class="dropdown-item"><a href="#">Kinderpate plus</a></li>
-                     <li class="dropdown-item"><a href="#">Waldpate</a></li>
+                     <li class="dropdown-item"><a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/verschiedenetabs/dorfpate.html">Dorfpate</a></li>
+                     <li class="dropdown-item"><a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/verschiedenetabs/kinderpate.html">Kinderpate plus</a></li>
+                     <li class="dropdown-item"><a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/verschiedenetabs/waldpate.html">Waldpate</a></li>
                    </ul>
                  </li>
                  <li class="dropdown-item"><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/schenkenundspenden">Schenken und Spenden</a></li>
