--- a/templates/craft_sicherungWebsite/templates/ueberUns/index.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/index.html
@@ -16,6 +16,11 @@
 
 <div class="container-fluid no-padding text-center" style="padding-top: 50px; position: relative;">
 
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item">Über Uns</a></li>
+  </ol>
+</nav>
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
   <div class="container achterspaltenlayout" style="position: relative;">
