--- a/templates/craft_sicherungWebsite/templates/ueberUns/leitbild.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/leitbild.html
@@ -9,6 +9,13 @@
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; width: 40%; left: 0px;">
 
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/ueberUns">Über Uns</a></li>
+    <li class="breadcrumb-item"> Leitbild</li>
+  </ol>
+</nav>
+
 <div class="container achterspaltenlayout" style="position: relative;">
   <div style="padding-bottom:80px; ">
     <h1 style="padding-bottom: 30px;"> Gelingendes Leben – Shalom in allen Lebensbereichen </h1>
