--- a/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
@@ -4,16 +4,15 @@
   <title>Chance International</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://aufbau-website.de/craft/web/CSSundJS/bootstrapcustom.min.css" rel="stylesheet" crossorigin="anonymous"/>
   <link href="https://www.aufbau-website.de/craft/web/CSSundJS/bootstrapcustom.min.css" rel="stylesheet" crossorigin="anonymous"/>
-
-  <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" crossorigin="anonymous"/>
-  <link href="https://www.aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" crossorigin="anonymous"/>
+  <link href="https://aufbau-website.de/craft/web/CSSundJS/bootstrapcustom.min.css" rel="stylesheet" crossorigin="anonymous"/>
 
   <link href="https://www.aufbau-website.de/craft/web/CSSundJS/stylevorgaben2.css" rel="stylesheet" />
   <link href="https://aufbau-website.de/craft/web/CSSundJS/stylevorgaben2.css" rel="stylesheet" />
+
 {% block headerZusatz %} {% endblock %}
 
+  <link href="https://www.aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />
   <link href="https://aufbau-website.de/craft/web/CSSundJS/navbarCSS.css" rel="stylesheet" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
