--- a/templates/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/erfahrungsberichte.html
@@ -7,9 +7,16 @@
 
 <div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
 
-<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> Erfahrungsberichte </li>
+  </ol>
+</nav>
 
-<div class="container achterspaltenlayout">
+<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
+
+<div class="container achterspaltenlayout" style="position: relative;">
   {% set entry = craft.entries.section('projekte').slug('erfahren-sie-mehr').one() %}
     <h1> {{ entry.title }} </h1>
     <div id="anleser"> {{ entry.anleser }}</div>
