--- a/templates/craft_sicherungWebsite/templates/projekte/programme.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme.html
@@ -17,11 +17,17 @@
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 4rem; position: relative;">
 
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> Programme </li>
+  </ol>
+</nav>
 
-  <img class="img-fluid " id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid " id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
 
-  <div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0;">
+  <div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0; position: relative">
     <div style="padding-bottom:3rem; ">
       <h1 style="padding-bottom: 30px;"> Mit drei nachhaltigen Programmen zum Ziel  </h1>
       <p id="anleser" style="padding-bottom: 2rem;"> Durch die strategische Verknüpfung drei nachhaltiger Entwicklungsprogramme bekämpfen wir Armut, geben Hoffnung und erreichen unser Ziel: starke Dörfer,
