--- a/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/naturschutz.html
@@ -5,15 +5,23 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
+<div class="container-fluid text-center" style="padding-top: 7rem; position: relative;">
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte/programme.html">Programme</a></li>
+    <li class="breadcrumb-item"> Naturschutz </li>
+  </ol>
+</nav>
 
-  <div class="container achterspaltenlayout" style="padding-top: 0px;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
+
+  <div class="container achterspaltenlayout" style="padding-top: 0px; padding-bottom: 0; position: relative;">
     {% set entry = craft.entries.section('projekte').slug('umwelt-und-naturschutz').one() %}
 
-    <h1 style="padding-bottom: 30px;"> {{ entry.anleser }}  </h1>
-    <div id="anleser"> {{ entry.text }} </div>
+    <h1 style="padding-bottom: 2rem;"> {{ entry.anleser }}  </h1>
+    <div id="anleser" style="padding-bottom: 0;"> {{ entry.text }} </div>
   </div>
 </div>
 
@@ -120,17 +128,14 @@
     {% set entry = craft.entries.section('projekte').slug('regenwald').one() %}
 
     <h2> {{ entry.title }} </h2>
-    <div id="anleser"> {{ entry.anleser }}    </div>
+    <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
   </div>
 
-  <div class="container achterspaltenlayout">
+  <div class="container achterspaltenlayout" style="padding-bottom: 0;">
     <div id="copy"> {{ entry.text }}    </div>
-
   </div>
 
-  <div class="container-fluid no-padding">
     <img class="img-fluid" src=" {{ craft.assets.filename('chance-projekte-programme-naturschutz_maedchen.jpg').one().getUrl() }}">
-  </div>
 
   <div class="container zwoelferspaltenlayout text-center" style="min-height: 372px;">
     {% set entry = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one() %}
@@ -143,7 +148,7 @@
         <div class="carousel-item active text-center">
           <div class="row">
 
-            <div class="col-md-4">
+            <div class="col-md-4 px-5"> <!-- px-5 steht für Padding rechts und links ne gewisse Breite -->
               <h3> {{ entry.title }} </h3>
               <div id="copy"> {{ entry.text }} </h3> </div>
             </div>
@@ -151,13 +156,17 @@
             {% set counter = 0 %}
             {% set entries = craft.entries.section('projekte').slug('der-chance-regenwald-in-zahlen').one().children().all() %}
             {% for entry in entries %} {% set counter = counter + 1 %}
-            {# Nach jedem dritten Eintrag wird das Karussel-item geschlossen und drei neue geladen #}
+
+            {% if craft.mobileDetect.isMobile and counter is not divisible by(3) and counter != 11 %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
+          </div>
+          </div>  <div class="carousel-item text-center"> <div class="row">
+            {% endif %}
 
             {% if counter is divisible by(3) %}
           </div>
         </div>  <div class="carousel-item text-center"> <div class="row"> {% endif %}
 
-            <div class="col-md-4">
+            <div class="col-md-4 px-5">
               <h3> {{ entry.title }} </h3>
               <div id="copy"> {{ entry.text }} </h3>  </div>
             </div>
@@ -168,34 +177,37 @@
       </div>
 
       {% set entry = craft.entries.section('projekte').slug('2-11').one() %}
-        <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
-          <img aria-hidden="true" src="{% if entry.bild.one() is not null %}{{ entry.bild.one().url }} {% else %} class="carousel-control-prev-icon" {% endif %}" style="margin-left: -120%; height: 2rem;"></img>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
-          <img aria-hidden="true" src="{% if entry.bild.inReverse().one() is not null %}{{ entry.bild.inReverse().one().url }} {% else %} class="carousel-control-next-icon" {% endif %}" style="margin-left: 120%; height: 2rem;"></img>
-          <span class="sr-only">Next</span>
-        </a>
+      <a class="carousel-control-prev" href="#carouselContent" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon mr-md-5 mr-sm-4" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselContent" role="button" data-slide="next">
+        <span class="carousel-control-next-icon ml-md-5 ml-sm-4" aria-hidden="true" style="color: red;">
+        </span>
+        <span class="sr-only">Next</span>
+      </a>
     </div>
   </div>
 
-
-  <div class="container achterspaltenlayout text-center" style="padding-top: 2rem;">
+  <div class="container achterspaltenlayout text-center" style="padding-top: 2rem; padding-bottom: 0;">
     {% set entry = craft.entries.section('projekte').slug('gelingenden-leben').one() %}
-
     <h2> {{ entry.title }} </h2>
-    <div id="anleser"> {{ entry.anleser }}    </div>
+    <div id="anleser" style="padding-bottom: 0;"> {{ entry.anleser }}    </div>
   </div>
 
-<div class="container-fluid no-padding" style="background-color: white;">
+  <div class="container zwoelferspaltenlayout" style="padding-top: 0;">
+    <img class="img-fluid "src="{% if entry.bild.one() is not null %}{{ entry.bild.one().url }} {% endif %}">
+  </div>
+
+<div class="container-fluid no-padding" style="background-color: white; padding-bottom: 3rem;">
       <div class="container zwoelferspaltenlayout text-center">
       {% set entry = craft.entries.section('projekte').slug('dorfentwicklung-chancen-für-dörfer').one() %}
-       <div id="anleser"> Lernen Sie unsere weiteren Progamme kennen </div>
+       <div id="anleser" style="padding-bottom: 3rem;"> Lernen Sie unsere weiteren Progamme kennen </div>
     </div>
 
-    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
+    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 2rem;">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4" style="padding-left: 0;">
         <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
       </div>
       <div class="col-md-8" style="padding-top: 2rem;">
@@ -206,9 +218,9 @@
     </div> <!-- Weitere Informationen zum Freiwilligendienst -->
 
     {% set entry = craft.entries.section('projekte').slug('patenschaft').one() %}
-    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px; margin-bottom: 3rem;">
+    <div class="zwoelferspaltenlayout container" style="background-color: #f8f5f2; padding-top: 0px;">
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4" style="padding-left: 0;">
         <img class="img-fluid w-100" style="padding-bottom: 0px;" src="{% if entry.bild.one() is not null %} {{ entry.bild.one().getUrl() }}  {% endif %}">
       </div>
       <div class="col-md-8" style="padding-top: 2rem;">
