--- a/templates/craft_sicherungWebsite/templates/projekte/projektberichte.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/projektberichte.html
@@ -6,11 +6,17 @@
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> Projektberichte </li>
+  </ol>
+</nav>
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
 
-  <div class="container achterspaltenlayout" style="padding-top:0px;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
     {% set entry = craft.entries.section('projekte').slug('geschichten').one() %}
 
     <div style="padding-bottom:50px; ">
