--- a/templates/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/themen.html
@@ -6,13 +6,18 @@
 
 
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 80px; position: relative;">
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 6.5rem; position: relative;">
 
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/projekte">Projekte</a></li>
+    <li class="breadcrumb-item"> Themen </li>
+  </ol>
+</nav>
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999; padding-top: 100px;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
-
-  <div class="container achterspaltenlayout" style="padding-top: 100px;">
+  <div class="container achterspaltenlayout" style="position: relative;">
       <h1 style="padding-bottom: 30px;"> Themen, die uns bewegen  </h1>
       <p id="anleser"> Diese Themenbereiche sind für unsere Arbeit von besonderer Bedeutung. </p>
       </div>
@@ -53,16 +58,18 @@
             <div id="copy"> {{ entry.anleser }} </h3>  </div>
           </div>
 
-          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
+          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) and counter != 4 %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
         </div>
         </div>  <div class="carousel-item text-center"> <div class="row">
           {% endif %}
+
 
           {% if counter is divisible by(3) %}
         </div>
       </div>  <div class="carousel-item text-center"> <div class="row"> {% endif %}
 
           {% endfor %}
+
         </div>
       </div>
     </div>
@@ -78,6 +85,14 @@
       </a>
   </div>
 </div> <!-- Container für Carousel -->
+
+ <!-- <script>
+$(document).ready(function(){
+  $("#karussel1").append(" </div>  </div> <div class=\"carousel-item text-center\"> <div class=\"row\"> ").);
+  $("  </div>  </div>  <div class=\"carousel-item text-center\"> <div class=\"row\"> ").insertAfter("#karussel2");
+});
+</script>
+ Geht leider nicht, da mit Append und InsertAfter auf der gleichen Ebene gearbeitet wird -> schließt div nicht -->
 
 <div class="container-fluid no-padding" style="background-color: #ffffff;">
 
@@ -104,7 +119,6 @@
           {% set counter = 0 %}
           {% set entries = craft.entries.section('projekte').slug('bildung').one().children().all() %}
           {% for entry in entries %} {% set counter = counter + 1 %}
-          {# Nach jedem dritten Eintrag wird das Karussel-item geschlossen und drei neue geladen #}
 
           <div class="col-lg-4 col-md-4 col-sm-12 col-12" id="{{ 'karussel' ~ counter }}">
             <img class="img-fluid mx-auto d-block" style="max-height: 150px; padding-bottom: 0;" src="  {% if entry.bild.one() is not null %}  {{ entry.bild.one().getUrl() }}  {% endif %}">
@@ -112,12 +126,12 @@
             <div id="copy"> {{ entry.anleser }} </h3>  </div>
           </div>
 
-          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
+          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) and counter != 6 %} {# Sonst wird ein zusätzlicher Container eingefügt #}
         </div>
         </div>  <div class="carousel-item text-center"> <div class="row">
           {% endif %}
 
-          {% if counter is divisible by(3) %}
+          {% if counter == 3 %}
         </div>
       </div>
       <div class="carousel-item text-center"> <div class="row"> {% endif %}
@@ -128,11 +142,11 @@
     </div>
 
     <a class="carousel-control-prev" href="#carousel2" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="carousel-control-prev-icon" aria-hidden="true" style="margin-left: -120%;"></span>
       <span class="sr-only">Previous</span>
     </a>
     <a class="carousel-control-next" href="#carousel2" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true" style="color: red;">
+      <span class="carousel-control-next-icon" aria-hidden="true">
       </span>
       <span class="sr-only">Next</span>
     </a>
@@ -153,7 +167,7 @@
 
 </div> <!-- Weißer Hintergrundcontainer -->
 
-<div class="container zwoelferspaltenlayout text-center">
+<div class="container zwoelferspaltenlayout text-center" style="padding-top: 0;">
 
   <div id="carousel3" class="carousel slide" data-ride="carousel" data-interval="false">
     <div class="carousel-inner">
@@ -171,7 +185,7 @@
             <div id="copy"> {{ entry.anleser }} </h3>  </div>
           </div>
 
-          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
+          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) and counter != 5 %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
         </div>
         </div>  <div class="carousel-item text-center"> <div class="row">
           {% endif %}
@@ -213,7 +227,7 @@
 
 </div> <!-- Weißer Hintergrundcontainer -->
 
-<div class="container zwoelferspaltenlayout text-center">
+<div class="container zwoelferspaltenlayout text-center" style="padding-top: 0;">
 
   <div id="carousel4" class="carousel slide" data-ride="carousel" data-interval="false">
     <div class="carousel-inner">
@@ -230,7 +244,7 @@
             <div id="copy"> {{ entry.anleser }} </h3>  </div>
           </div>
 
-          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
+          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) and counter != 5 %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
         </div>
         </div>  <div class="carousel-item text-center"> <div class="row">
           {% endif %}
@@ -273,7 +287,7 @@
 
 </div> <!-- Weißer Hintergrundcontainer -->
 
-<div class="container zwoelferspaltenlayout text-center">
+<div class="container zwoelferspaltenlayout text-center" style="padding-top: 0;">
 
   <div id="carousel5" class="carousel slide" data-ride="carousel" data-interval="false">
     <div class="carousel-inner">
@@ -291,7 +305,7 @@
             <div id="copy"> {{ entry.anleser }} </h3>  </div>
           </div>
 
-          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
+          {% if craft.mobileDetect.isMobile and counter is not divisible by(3) and counter != 7 %} {# Für mobile Geräte wird nach jedem Eintrag das Element geschlossen #}
         </div>
         </div>  <div class="carousel-item text-center"> <div class="row">
           {% endif %}
@@ -336,17 +350,17 @@
 
 <div class="container-fluid no-padding" style="background-color: #ffffff; padding-bottom: 3rem;">
 
-  <div class="container achterspaltenlayout" style="padding-bottom: 0px;">
-    <h4> Quellen: </h4>
-  * http://www.unric.org/html/german/mdg/MP_PovertyFacts.pdf <br>
-  1 Deutschlandfunk: „Durchwachsene Bilanz im Kampf gegen die Armut“ 23.03.15, http://www.deutschlandfunk.de/entwicklungslaender-durchwachsene-bilanz-im-kampf-gegen-die.724.de.html?dram:article_id=314962 <br>
-  2 UNICEF, „The State of the World’s Children 2015: Reimagine the Future“, http://sowc2015.unicef.org, Under-5 mortality rate (2013) S.31, New York 2015. <br>
-  3 Ravallion, M; Chen, S; Sangraula, P. Dollar a Day Revisited. World Bank Economic Review. 23, 2, 163-184, 2009. <br>
-  4 Worldbank: http://data.worldbank.org/indicator/SI.POV.DDAY/countries?display=graph <br>
-  5 UNICEF, „The State of the World’s Children 2010“, http://www.unicef.org/rightsite/sowc/ <br>
-  6 WHO, World Hunger and Poverty Statistics, 2013, http://www.worldhunger.org/articles/Learn/world%20hunger%20facts%202002.htm <br>
-  7 FAO, State of Food Insecurity in the World, 2015. http://www.fao.org/3/a-i4646e.pdf <br>
-  8 Welthungerhilfe: „FACT-Sheet. Fakten und Zahlen zu Wasser“, 2013, http://www.welthungerhilfe.de/fileadmin/user_upload/Themen/ <br>
+  <div class="container achterspaltenlayout" id="info" style="padding-bottom: 0px;">
+    <h4 style="margin-bottom: 0;"> Quellen: </h4>
+  <sub>*</sub> &nbsp; http://www.unric.org/html/german/mdg/MP_PovertyFacts.pdf <br>
+  <sup>1</sup> &nbsp; Deutschlandfunk: „Durchwachsene Bilanz im Kampf gegen die Armut“ 23.03.15, http://www.deutschlandfunk.de/entwicklungslaender-durchwachsene-bilanz-im-kampf-gegen-die.724.de.html?dram:article_id=314962 <br>
+  <sup>2</sup> &nbsp; UNICEF, „The State of the World’s Children 2015: Reimagine the Future“, http://sowc2015.unicef.org, Under-5 mortality rate (2013) S.31, New York 2015. <br>
+  <sup>3</sup> &nbsp; Ravallion, M; Chen, S; Sangraula, P. Dollar a Day Revisited. World Bank Economic Review. 23, 2, 163-184, 2009. <br>
+  <sup>4</sup> &nbsp; Worldbank: http://data.worldbank.org/indicator/SI.POV.DDAY/countries?display=graph <br>
+  <sup>5</sup> &nbsp; UNICEF, „The State of the World’s Children 2010“, http://www.unicef.org/rightsite/sowc/ <br>
+  <sup>6</sup> &nbsp; WHO, World Hunger and Poverty Statistics, 2013, http://www.worldhunger.org/articles/Learn/world%20hunger%20facts%202002.htm <br>
+  <sup>7</sup> &nbsp; FAO, State of Food Insecurity in the World, 2015. http://www.fao.org/3/a-i4646e.pdf <br>
+  <sup>8</sup> &nbsp; Welthungerhilfe: „FACT-Sheet. Fakten und Zahlen zu Wasser“, 2013, http://www.welthungerhilfe.de/fileadmin/user_upload/Themen/ <br>
 
   </div>
 
