--- a/templates/craft_sicherungWebsite/templates/spenden/index.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/index.html
@@ -16,6 +16,8 @@
 
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 80px; position: relative;">
+
+
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
   <div class="container achterspaltenlayout">
     {% set entry = craft.entries.section('spenden').slug('spende').one() %}
@@ -37,10 +39,10 @@
       <div class="row text-center">
         <div class="col-lg-1"> </div>
       <div class="col-lg-4" style="margin-right: -3%; ">
-        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Regelmäßig Spenden</a>
+        <a href="https://aufbau-website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html" class="btn btn-primary" role="button">Regelmäßig Spenden</a>
       </div>          <div class="col-lg-2"> <br> </div>
       <div class="col-lg-4">
-        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Einmalig Spenden</a>
+        <a href="https://aufbau-website.de/craft/web/spenden/allgemein/einmaligallgemein.html" class="btn btn-primary" role="button">Einmalig Spenden</a>
       </div>         <div class="col-lg-1"> </div>
     </div> <br>
     </div>
@@ -53,10 +55,10 @@
       <div class="row text-center">
         <div class="col-lg-1"> </div>
       <div class="col-lg-4" style="margin-right: -3%; ">
-        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Regelmäßig Spenden</a>
+        <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig" class="btn btn-primary" role="button">Regelmäßig Spenden</a>
       </div>          <div class="col-lg-2"> <br> </div>
       <div class="col-lg-4">
-        <a href="https://aufbau-website.de/craft/web/projekte" class="btn btn-primary" role="button">Einmalig Spenden</a>
+        <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandeinmal" class="btn btn-primary" role="button">Einmalig Spenden</a>
       </div>         <div class="col-lg-1"> </div>
     </div> <br>
     </div>
