navbar, breadcrumbs und titel-feld für jens

--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar.html
@@ -31,14 +31,14 @@
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link" id="home" href="https://aufbau-Website.de/craft/web/" style="color:black; font-weight: bold;"> HOME </a>
+          <a class="nav-link" href="https://aufbau-Website.de/craft/web/" id="naviUeberschrift"> HOME </a>
         </li>
-        <div class="dropdown">
 
+        <div class="dropdown">
           <li class="nav-item dropdown" >
             <a class="nav-link" data-toggle="dropdown"
-            href="https://aufbau-Website.de/craft/web/ueberUns" style="color:black; font-weight: bold;"> ÜBER UNS </a>
-            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+            href="https://aufbau-Website.de/craft/web/ueberUns" id="naviUeberschrift"> ÜBER UNS </a>
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
               <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/ueberUns/konzept.html"> Konzept</a> </li>
@@ -62,9 +62,9 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" style="color:black; font-weight: bold;"> PROJEKTE </a>
+            aria-expanded="false" href="https://aufbau-Website.de/craft/web/projekte" id="naviUeberschrift"> PROJEKTE </a>
 
-            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
               <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
               <li class="dropdown-divider"></li>
               <li class="dropdown-submenu">
@@ -95,9 +95,9 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" style="color:black; font-weight: bold;"> SPENDEN </a>
+            aria-expanded="false" href="https://aufbau-Website.de/craft/web/spenden" id="naviUeberschrift"> SPENDEN </a>
 
-            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
               <li class="dropdown-submenu">
                 <a  class="dropdown-item" tabindex="-1" href="https://aufbau-Website.de/craft/web/spenden/allgemein.html">Allgemein Spenden</a>
                 <ul class="dropdown-menu">
@@ -140,9 +140,9 @@
         <div class="dropdown">
           <li class="nav-item dropdown">
             <a class="nav-link" data-toggle="dropdown" aria-haspopup="true"
-            aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" style="color:black; font-weight: bold;"> FÜR SIE </a>
+            aria-expanded="false" href="https://aufbau-Website.de/craft/web/fuerSie" id="naviUeberschrift"> FÜR SIE </a>
 
-            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu">
+            <ul class="dropdown-menu multi-level" role="menu" aria-labelledby="dropdownMenu" id="naviSubmenu">
               <li class="dropdown-item"> <a href="https://aufbau-Website.de/craft/web/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li>
               <li class="dropdown-divider"></li>
 
@@ -181,10 +181,10 @@
           </ul>
         </div>
         <li class="nav-item">
-          <a class="nav-link" id="blog" href="https://aufbau-Website.de/craft/web/blog" style="color:black; font-weight: bold;"> BLOG </a>
+          <a class="nav-link" href="https://aufbau-Website.de/craft/web/blog" id="naviUeberschrift"> BLOG </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" id="kontakt" href="https://aufbau-Website.de/craft/web/kontakt" style="color:black; font-weight: bold;"> KONTAKT </a>
+          <a class="nav-link" href="https://aufbau-Website.de/craft/web/kontakt" id="naviUeberschrift"> KONTAKT </a>
         </li>
 
       </ul>
