--- a/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/programme/dorfentwicklung.html
@@ -1,8 +1,10 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
-
-
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('dorfentwicklung').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
 {% block block1 %}
 
 <div class="container-fluid text-center" style="padding-top: 9rem; position: relative;">
