--- a/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
+++ b/templates/craft_sicherungWebsite/web/CSSundJS/stylevorgaben2.css
@@ -34,6 +34,24 @@
   font-weight: normal;
   font-style: normal;
 }
+
+@font-face {
+    font-family: 'source_sans_probold';
+    src: url('fonts/sourcesanspro-bold-webfont.woff2') format('woff2'),
+         url('fonts/sourcesanspro-bold-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'source_sans_proregular';
+    src: url('fonts/sourcesanspro-regular-webfont.woff2') format('woff2'),
+         url('fonts/sourcesanspro-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
 .stylevorgaben2 .no-padding {
   padding-left: 0;
   padding-right: 0;
@@ -112,6 +130,21 @@
   color: #ed6e2c;
   font-family: 'source_sans_prosemibold';
 }
+
+.stylevorgaben2 #naviUeberschrift {
+  font-size: 16px;
+  line-height: 22px;
+  color: #333333;
+  font-family: 'source_sans_probold';
+}
+
+.stylevorgaben2 #naviSubmenu{
+  font-size: 16px;
+  line-height: 22px;
+  color: #333333;
+  font-family: 'source_sans_proregular';
+}
+
 @media all and (max-width: 1100px) and (min-width: 700px) {
   .stylevorgaben2 h1 {
     font-size: 41px;
