--- a/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/layoutHome.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Chance International</title>
+  <title>{% block titelfuerseo %} {% endblock %}</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://www.aufbau-website.de/craft/web/CSSundJS/bootstrapcustom.min.css" rel="stylesheet" crossorigin="anonymous"/>
