--- a/templates/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
+++ b/templates/craft_sicherungWebsite/templates/_layouts/navbar-mobile.html
@@ -277,21 +277,23 @@
 .navbarMobilgeraet .item ul {
   padding: 0 0.25em;
 }
-.navbarMobilgeraet .nav li a {
+.navbarMobilgeraet .nav a {
   line-height: 30px;
   margin: 0;
   padding: 0 4em;
   padding-left: 0;
   list-style: none;
   text-decoration: none;
-  color: #90A4AE;
-  font-weight: 100;
+  color: #333333;
+  font-family: 'source_sans_probold';
 }
 
-
+.navbarMobilgeraet hr {
+  background: transparent;
+  border-top: 2px solid #f8f5f2;
+}
 .navbarMobilgeraet .arrow{ /* Die Pfeil in der ersten Ebene richtig setzen */
   float: left;
-  padding-right: 10%;
   position: relative;
   top: 50%;
   transform: translateY(25%);
@@ -301,7 +303,6 @@
   width: 20px;
   height: 20px;
   float: right;
-  padding-right: 10%;
 }
 
 </style>
@@ -319,20 +320,20 @@
   <label for="menu" id="nav-icon" style="width: auto; display: inline; float: right; padding-right: 2em;"> <img id="hamburgerMobile" style="max-width: 32px; max-height: 32px; padding-top: 1rem;" src=" {{ entry.bild3.one().url }} "> </label>
 
 
-  <div class="multi-level">
+  <div class="multi-level" style="width: 95%;">
 
     <div class="item" style="padding-top: 40px; padding-left: 2em;" id="homeBox">
-      <a href="https://aufbau-website.de/craft/web/" style="padding-right: 20%; padding-top: 10%;">Home</a>
+      <a href="https://aufbau-website.de/craft/web/" id="naviUeberschrift" style="padding-right: 20%; padding-top: 10%;">HOME</a>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
 
     <div class="item" id="ersteBox" style="padding-left: 2em;">
-      <a href="https://aufbau-website.de/craft/web/ueberUns" style="display: inline; padding-right: 20%;" id="linkUeberUns" >Über Uns</a>
+      <a href="https://aufbau-website.de/craft/web/ueberUns" style="display: inline; padding-right: 20%;" id="linkUeberUns" >ÜBER UNS</a>
       <input type="checkbox" id="A"/>
       <label for="A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " id="pfeil1" class="arrow" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
-        <li id="ueberUnsSchrift"> Über Uns</li>
+        <li id="ueberUnsSchrift"> Über Uns</li> <hr>
         <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/arbeitsweise.html"> Arbeitsweise</a> </li> <hr>
 
         <li > <a href="https://aufbau-Website.de/craft/web/ueberUns/konzept.html"> Konzept</a> </li> <hr>
@@ -349,14 +350,14 @@
     </div>
 
     <div class="item" id="zweiteBox" style="padding-left: 2em;">
-      <a href="https://aufbau-Website.de/craft/web/projekte" id="linkProjekte" style="display: inline; padding-right: 20%;">Projekte</a>
+      <a href="https://aufbau-Website.de/craft/web/projekte" id="linkProjekte" style="display: inline; padding-right: 20%;">PROJEKTE</a>
       <input type="checkbox" id="B"/>
-      <label for="B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil2" style="float: right; padding-left: 10%;">  </label>
+      <label for="B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil2" style="float: right;">  </label>
 
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul> <!-- Dropdown beginnt -->
-        <li id="projekteSchrift"> Projekte</li>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li>
+        <li id="projekteSchrift"> Projekte</li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/projekte/wowirarbeiten.html"> Wo wir arbeiten</a> </li> <hr>
 
         <li>
           <div class="sub-item" id="subItemProjekte"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
@@ -364,10 +365,10 @@
             <input type="checkbox" id="B-A"/>
             <label for="B-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
           </div>
-        </li>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>  </li>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>  </li>
+        </li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/projekte/themen.html"> Themen</a> </li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/projekte/erfahrungsberichte.html">Erfahrungsberichte</a>  </li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/projekte/projektberichte.html">Projektberichte</a>  </li> <hr>
       </ul>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
@@ -377,35 +378,35 @@
       <label for="B-A1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " id="pfeil12" class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
-        <li id="projekteProgramme"> Programme</li>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/kinderpate.html">Kinderpaten</a></li>
-        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/naturschutz.html">Umwelt- und Naturschutz</a></li>
+        <li id="projekteProgramme"> Programme</li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/dorfentwicklung.html">Dorfentwicklung</a></li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/kinderpate.html">Kinderpaten</a></li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/projekte/programme/naturschutz.html">Umwelt- und Naturschutz</a></li> <hr>
       </ul>
     </div>
 
     <div class="item" id="dritteBox" style="padding-left: 2em;">
-      <a href="https://aufbau-Website.de/craft/web/spenden" id="linkSpenden" style="display: inline; padding-right: 20%;">Spenden</a>
+      <a href="https://aufbau-Website.de/craft/web/spenden" id="linkSpenden" style="display: inline; padding-right: 20%;">SPENDEN</a>
       <input type="checkbox" id="C"/>
-      <label for="C" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil3" style="float: right; padding-left: 10%;">  </label>
+      <label for="C" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil3" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
 
       <ul> <!-- Dropdown beginnt -->
-        <li id="spendenSchrift"> Spenden</li>
+        <li id="spendenSchrift"> Spenden</li> <hr>
         <li>
           <div class="sub-item"> <!-- Zweite Dropdown-Ebene beginnt, also Spenden-Allgemein -> Einmalig oder Regelmäßig -->
             <a href="https://aufbau-Website.de/craft/web/spenden/einmalig.html" style="display: inline; padding-right: 20%;">Allgemein Spenden</a>
             <input type="checkbox" id="C-A"/>
             <label for="C-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
           </div>
-        </li>
+        </li> <hr>
         <li> <!-- Das List-Element zeigt an, dass auch das Dropdown-Menu auch nur ein List-Element in dem Obermenu ist -->
           <div class="sub-item"> <!-- Zweite Dropdown-Ebene beginnt, also Spenden spezifisch -> Einmalig oder Regelmäßig -->
             <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandeinmal" style="display: inline; padding-right: 20%;">Projektbezogen Spenden</a>
             <input type="checkbox" id="C-B"/>
             <label for="C-B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene" </label>
           </div>
-          </li>
+          </li> <hr>
         </ul>
         <hr> <!-- Horizontal Ruler für Abstände -->
     </div> <!-- Dritte Box (Spenden) - Ende -->
@@ -415,9 +416,9 @@
       <label for="C-A1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " id="pfeil12" class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
-        <li> Allgemein Spenden</li>
-        <li> <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein.html">Einmalig</a></li>
-        <li> <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html">Regelmäßig</a></li>
+        <li> Allgemein Spenden</li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/einmaligallgemein.html">Einmalig</a></li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html">Regelmäßig</a></li> <hr>
       </ul>
     </div>
 
@@ -426,21 +427,21 @@
       <label for="C-B1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
-        <li> Projektbezogen Spenden</li>
+        <li> Projektbezogen Spenden</li> <hr>
 
         <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandeinmal" style="display: inline; padding-right: 20%;">Einmalig</a>
           <input type="checkbox" id="C-C"/>
           <label for="C-C" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
-        </li>
+        </li> <hr>
 
         <li> <a href="https://aufbau-Website.de/craft/web/spenden/allgemein/regelmaesigallgemein.html" style="display: inline; padding-right: 20%;">Regelmäßig</a>
           <input type="checkbox" id="C-D"/>
           <label for="C-D" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
-        </li>
+        </li> <hr>
 
-        <li><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/schenkenundspenden">Schenken und Spenden</a></li>
-        <li><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/einkaufenundspenden">Einkaufen und Spenden</a></li>
-        <li><a href="#">Lastschrifttermine</a></li>
+        <li><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/schenkenundspenden">Schenken und Spenden</a></li> <hr>
+        <li><a href="https://aufbau-Website.de/craft/web/spenden/projektbezogen/einkaufenundspenden">Einkaufen und Spenden</a></li> <hr>
+        <li><a href="#">Lastschrifttermine</a></li> <hr>
       </ul>
     </div>
 
@@ -450,11 +451,11 @@
       <label for="C-C1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
-        <li> Einmalig Projektbezogen Spenden </li>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Dorfpate</a></li>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Kinderpate Plus</a></li>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Waldpate</a></li>
+        <li> Einmalig Projektbezogen Spenden </li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Dorfpate</a></li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Kinderpate Plus</a></li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Waldpate</a></li> <hr>
       </ul>
     </div>
 
@@ -464,41 +465,41 @@
       <label for="C-D1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
-        <li> Regelmäßig Projektbezogen Spenden </li>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Dorfpate</a></li>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Kinderpate Plus</a></li>
-        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Waldpate</a></li>
+        <li> Regelmäßig Projektbezogen Spenden </li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Länderpate</a></li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Dorfpate</a></li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Kinderpate Plus</a></li> <hr>
+        <li> <a href="https://aufbau-website.de/craft/web/spenden/projektbezogen/partnerlandregelmaesig">Waldpate</a></li> <hr>
       </ul>
     </div>
 
     <div class="item" id="vierteBox" style="padding-left: 2em;">
-      <a href="https://aufbau-website.de/craft/web/fuerSie" id="linkFuerSie" style="display: inline; padding-right: 20%;">Für Sie</a>
+      <a href="https://aufbau-website.de/craft/web/fuerSie" id="linkFuerSie" style="display: inline; padding-right: 20%;">FÜR SIE</a>
       <input type="checkbox" id="D"/>
-      <label for="D" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil4" style="float: right; padding-left: 10%;">  </label>
+      <label for="D" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="arrow" id="pfeil4" style="float: right;">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
 
       <ul> <!-- Dropdown beginnt -->
-        <li id="fuerSieSchrift"> Für Sie</li>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li>
+        <li id="fuerSieSchrift"> Für Sie</li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/chancekommt.html"> Chance e.V. kommt zu Ihnen</a> </li> <hr>
         <li>
           <div class="sub-item" id="subItemFreiwilligendienst"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
             <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html" style="display: inline; padding-right: 20%;">Freiwilligendienst</a>
             <input type="checkbox" id="D-A"/>
             <label for="D-A" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
-        </li>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li>
+        </li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/projektbesuch.html">Projektbesuch</a> </li> <hr>
         <li>
           <div class="sub-item" id="subItemDaheim"> <!-- Zweite Dropdown-Ebene beginnt, also Programme -> Dorfentwicklung und so -->
             <a href="https://aufbau-website.de/craft/web/fuerSie/daheim.html" style="display: inline; padding-right: 20%;">Für Sie daheim</a>
             <input type="checkbox" id="D-B"/>
             <label for="D-B" style="display: inline;">   <img src=" {{ entry.bild.one().url }} " class="pfeilErsteUnterebene">  </label>
           </div>
-        </li>
-        <li> <a href="#">Presse und Downloads</a> </li>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li>
-        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li>
+        </li> <hr>
+        <li> <a href="#">Presse und Downloads</a> </li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/literaturtipps.html">Literaturtipps</a> </li> <hr>
+        <li> <a href="https://aufbau-Website.de/craft/web/fuerSie/zitate.html">Zitate</a> </li> <hr>
       </ul>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
@@ -509,11 +510,11 @@
       <label for="D-A1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
-        <li> Freiwilligendienst </li>
-        <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung.html">Deine Bewerbung</a></li>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li>
+        <li> Freiwilligendienst </li> <hr>
+        <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/weltwaerts.html">Mit "weltwärts" nach Peru oder Kenia</a></li> <hr>
+        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/peru.html">Weitere Einsatzmöglichkeiten in Peru</a></li> <hr>
+        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/bewerbung.html">Deine Bewerbung</a></li> <hr>
+        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/freiwillig/erfahrungsberichte.html">Erfahrungsberichte</a></li> <hr>
       </ul>
     </div>
 
@@ -522,20 +523,20 @@
       <label for="D-B1" style="display: inline;">   <img src=" {{ entry.bild2.one().url }} " class="pfeilUnterebene">  </label>
       <br clear="all" /> <!-- Einen rabiaten Zeileumbruch am Ende -->
       <ul>
-        <li> Für Sie daheim </li>
-        <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/kaffee.html">Kaffee - unsere tägliche Chance</a></li>
-        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li>
+        <li> Für Sie daheim </li> <hr>
+        <li><a tabindex="-1" href="https://aufbau-Website.de/craft/web/fuerSie/daheim/consumermission.html">"Consumer Missions"</a></li> <hr>
+        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/kaffee.html">Kaffee - unsere tägliche Chance</a></li> <hr>
+        <li><a href="https://aufbau-Website.de/craft/web/fuerSie/daheim/blumen.html">Bäume für Kenia statt Blumen für Euro</a></li> <hr>
       </ul>
     </div>
 
     <div style="padding-top: 5px; padding-left: 2em;" id="blogBox">
-      <a href="https://aufbau-website.de/craft/web/blog">Blog</a>
+      <a href="https://aufbau-website.de/craft/web/blog">BLOG</a>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
 
     <div style="padding-top: 20px; padding-left: 2em;" id="kontaktBox">
-      <a href="https://aufbau-website.de/craft/web/kontakt">Kontakt</a>
+      <a href="https://aufbau-website.de/craft/web/kontakt">KONTAKT</a>
       <hr> <!-- Horizontal Ruler für Abstände -->
     </div>
 
