--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/peru.html
@@ -12,11 +12,18 @@
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
 
+  <nav aria-label="breadcrumb" id="info">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a></li>
+      <li class="breadcrumb-item"> Weitere Einsatzmöglichkeiten in Peru </li>
+    </ol>
+  </nav>
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
 
-  <div class="container achterspaltenlayout" style="padding-top:0px;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
     {% set entry = craft.entries.section('fuerSie').slug('peru-erwartet').one() %}
 
       <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
