--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/weltwaerts.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwillig/weltwaerts.html
@@ -6,7 +6,7 @@
 {% block block1 %}
 
 <style>
- hr {
+ .stylevorgaben2 hr {
    margin-top: -1rem;
    margin-bottom: 0;
  }
@@ -14,6 +14,13 @@
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
 
+  <nav aria-label="breadcrumb" id="info">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie/freiwilligendienst.html">Freiwilligendienst</a></li>
+      <li class="breadcrumb-item"> Mit weltwärts nach Peru oder Kenia </li>
+    </ol>
+  </nav>
 
   <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
 
