--- a/templates/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/freiwilligendienst.html
@@ -7,11 +7,16 @@
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 8rem; position: relative;">
 
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
+    <li class="breadcrumb-item"> Freiwilligendienst </li>
+  </ol>
+</nav>
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
-
-  <div class="container achterspaltenlayout" style="padding-top:0px;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
     {% set entry = craft.entries.section('fuerSie').slug('freiwillig-helfen').one() %}
 
     <div style="padding-bottom:3rem; ">
