--- a/templates/craft_sicherungWebsite/templates/fuerSie/projektbesuch.html
+++ b/templates/craft_sicherungWebsite/templates/fuerSie/projektbesuch.html
@@ -5,11 +5,18 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" style="padding-top: 150px; position: relative;">
+<div class="container-fluid text-center" style="padding-top: 7rem; position: relative;">
 
-<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <nav aria-label="breadcrumb" id="info">
+  <ol class="breadcrumb">
+    <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/fuerSie">Für Sie</a></li>
+    <li class="breadcrumb-item"> Projektbesuch </li>
+  </ol>
+</nav>
 
-<div class="container achterspaltenlayout">
+<img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
+
+<div class="container achterspaltenlayout" style="position: relative;">
   {% set entry = craft.entries.section('fuerSie').slug('besuchen-vor-ort').one() %}
 
   <div style="padding-bottom:30px; ">
