--- a/templates/craft_sicherungWebsite/templates/projekte/_entry/empfehlungeinzeln.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/_entry/empfehlungeinzeln.html
@@ -2,6 +2,10 @@
 {% extends "_layouts/layoutHome.html" %}
 
 
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('empfehlungen-ausführlich').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
 
 {% block block1 %}
 
