--- a/templates/craft_sicherungWebsite/templates/projekte/index.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/index.html
@@ -1,6 +1,10 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('projekte').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
 
 {% block headerbildPosition1 %}
 
