--- a/templates/craft_sicherungWebsite/templates/projekte/themen.html
+++ b/templates/craft_sicherungWebsite/templates/projekte/themen.html
@@ -1,10 +1,13 @@
 
 {% extends "_layouts/layoutHome.html" %}
 
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('themen').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
+
 
 {% block block1 %}
-
-
 
 <div class="container-fluid text-center" id="ersterContainer" style="padding-top: 6.5rem; position: relative;">
 
