--- a/templates/craft_sicherungWebsite/templates/spenden/allgemein/einmaligallgemein.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/allgemein/einmaligallgemein.html
@@ -3,17 +3,23 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; position: relative;">
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; position: relative;">
 
+  <nav aria-label="breadcrumb" id="info">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden">Spenden</a></li>
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden/allgemein.html"> Allgemein Spenden</a></li>
+      <li class="breadcrumb-item"> Einmalig Allgemein Spenden </li>
+    </ol>
+  </nav>
 
-  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;  z-index: -999;">
+  <img class="img-fluid" id="welle" src="{{ craft.assets.filename('welle.png').one().getUrl() }}" style="position: absolute; left:0; width: 40%;">
 
-
-  <div class="container achterspaltenlayout" style="padding-top:0px;">
+  <div class="container achterspaltenlayout" style="padding-top:0px; position: relative;">
     {% set entry = craft.entries.section('spenden').slug('menschen-chance2').one() %}
 
-    <div style="padding-bottom:50px; ">
-      <h1 style="padding-bottom: 30px;"> {{ entry.title }}  </h1>
+    <div style="padding-bottom:3rem; ">
+      <h1 style="padding-bottom: 2rem;"> {{ entry.title }}  </h1>
     </div>
   </div>
 </div>
@@ -48,19 +54,19 @@
             {% set entry = craft.entries.section('spenden').slug('5-euro').one() %}
             <div class="tab-content" id="pills-tabContent">
               <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-                <div id="copy"> {{ entry.anleser }}  </div>
+                <div id="copy" style="padding-left: 2rem;"> {{ entry.anleser }}  </div>
               </div>
               {% set entry = craft.entries.section('spenden').slug('20-euro').one() %}
               <div class="tab-pane fade" id="pills-profile1" role="tabpanel" aria-labelledby="pills-profile-tab">
-                <div id="copy"> {{ entry.anleser }}  </div>
+                <div id="copy" style="padding-left: 2rem;"> {{ entry.anleser }}  </div>
               </div>
               {% set entry = craft.entries.section('spenden').slug('35-euro').one() %}
               <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile-tab">
-                <div id="copy"> {{ entry.anleser }}  </div>
+                <div id="copy" style="padding-left: 2rem;"> {{ entry.anleser }}  </div>
               </div>
               {% set entry = craft.entries.section('spenden').slug('50-euro').one() %}
               <div class="tab-pane fade" id="pills-profile3" role="tabpanel" aria-labelledby="pills-profile-tab">
-                <div id="copy"> {{ entry.anleser }}  </div>
+                <div id="copy" style="padding-left: 2rem;"> {{ entry.anleser }}  </div>
               </div>
             </div> <!-- Die Tabs mit den verschiedenen Auswirkungen der Spenden, wechselbar durch klicken -->
           </div>
