--- a/templates/craft_sicherungWebsite/templates/spenden/allgemein/regelmaesigallgemein.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/allgemein/regelmaesigallgemein.html
@@ -3,7 +3,15 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; padding-bottom: 3rem;">
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; padding-bottom: 3rem;">
+
+  <nav aria-label="breadcrumb" id="info">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden">Spenden</a></li>
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden/allgemein.html"> Allgemein Spenden</a></li>
+      <li class="breadcrumb-item"> Regelmäßig Allgemein Spenden </li>
+    </ol>
+  </nav>
 
   <div class="container achterspaltenlayout" style="padding-top:0px; background-image: url({{ craft.assets.filename('chance-ev-spenden-allgemein-icon.png').one().getUrl() }}); background-repeat: no-repeat;">
     {% set entry = craft.entries.section('spenden').slug('menschen-chance1').one() %}
@@ -41,19 +49,19 @@
           {% set entry = craft.entries.section('spenden').slug('5-euro').one() %}
           <div class="tab-content" id="pills-tabContent">
             <div class="tab-pane fade show active" id="pills-home" role="tabpanel" aria-labelledby="pills-home-tab">
-              <div id="copy"> {{ entry.anleser }}  </div>
+              <div id="copy" style="padding-left: 2rem;"> {{ entry.anleser }}  </div>
             </div>
             {% set entry = craft.entries.section('spenden').slug('20-euro').one() %}
             <div class="tab-pane fade" id="pills-profile1" role="tabpanel" aria-labelledby="pills-profile-tab">
-              <div id="copy"> {{ entry.anleser }}  </div>
+              <div id="copy" style="padding-left: 2rem;"> {{ entry.anleser }}  </div>
             </div>
             {% set entry = craft.entries.section('spenden').slug('35-euro').one() %}
             <div class="tab-pane fade" id="pills-profile2" role="tabpanel" aria-labelledby="pills-profile-tab">
-              <div id="copy"> {{ entry.anleser }}  </div>
+              <div id="copy" style="padding-left: 2rem;"> {{ entry.anleser }}  </div>
             </div>
             {% set entry = craft.entries.section('spenden').slug('50-euro').one() %}
             <div class="tab-pane fade" id="pills-profile3" role="tabpanel" aria-labelledby="pills-profile-tab">
-              <div id="copy"> {{ entry.anleser }}  </div>
+              <div id="copy" style="padding-left: 2rem;"> {{ entry.anleser }}  </div>
             </div>
           </div> <!-- Die Tabs mit den verschiedenen Auswirkungen der Spenden, wechselbar durch klicken -->
         </div>
