--- a/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/einkaufenundspenden.html
+++ b/templates/craft_sicherungWebsite/templates/spenden/projektbezogen/einkaufenundspenden.html
@@ -3,7 +3,14 @@
 
 {% block block1 %}
 
-<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 120px; padding-bottom: 3rem;">
+<div class="container-fluid text-center" id="ersterContainer" style="padding-top: 7rem; padding-bottom: 3rem;">
+
+  <nav aria-label="breadcrumb" id="info">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"> <a href="https://aufbau-website.de/craft/web/spenden">Spenden</a></li>
+      <li class="breadcrumb-item"> Einkaufen und Spenden </li>
+    </ol>
+  </nav>
 
   <div class="container achterspaltenlayout" style="padding-top:0px; background-image: url({{ craft.assets.filename('chance-ev-spenden-allgemein-icon.png').one().getUrl() }}); background-repeat: no-repeat;">
     {% set entry = craft.entries.section('spenden').slug('partnerland').one() %}
