--- a/templates/craft_sicherungWebsite/templates/ueberUns/index.html
+++ b/templates/craft_sicherungWebsite/templates/ueberUns/index.html
@@ -1,6 +1,10 @@
+{% block titelfuerseo %}
+{% set entry = craft.entries.section('suchmaschinenoptimierung').slug('über-uns').one() %}
+{{ entry.titelfeldFuerJens }}
+{% endblock %}
+
 
 {% extends "_layouts/layoutHome.html" %}
-
 
 {% block headerbildPosition1 %}
 
